fixed gallery.html carousel overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ body {
     position:fixed;
     width:100%;
     top:0;
-    z-index:1;
+    z-index:2;
 
 }
 
@@ -316,3 +316,7 @@ body {
 /******************* CONTACT PAGE END*/
 
 
+    #carouselExampleControls{
+      margin-top: 0;
+      z-index: 1;
+    }
